# calliope

./: .appveyor.yml  .azure-pipelines.yml  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .hound.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  CITATION  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  base.py  calliope_run.py  changelog.rst  codecov.yml  conftest.py  core.py  csp_model.py  csp_model_settings.py  lisa_run.py  make.bat  mkdocs.yml  pyproject.toml  pytest  pytest.ini  q  requirements.txt  requirements.yml  (+10 more)
.github/: .codecov.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
.github/workflows/: commit-ci.yml  link-check.yml  pr-ci-pipbuild-environment.yml  pr-ci.yml  pre-release.yml  release.yml
calliope/: AH_test.py  __init__.py  _version.py  analysis.py  analysis_utils.py  cli.py  constraints.py  core.py  data_tools.py  examples.py  exceptions.py  locations.py  model_settings.yaml  nodes.py  output.py  parallel.py  parallel_tools.py  read.py  run_settings.yaml  sets.py  techs.py  time.py  time_clustering.py  time_clustering_tools.py  time_funcs.py  time_functions.py  time_masks.py  time_tools.py  transmission.py  utils.py
calliope/AH/: main.py  mycsp.csv
calliope/analysis/: plotting.py  postprocess.py  util.py
calliope/backend/: __init__.py  backend_model.py  backends.py  checks.py  checks.yaml  equation_parser.py  expression_parser.py  forecasts.py  helper_functions.py  imasks.py  latex_backend.py  latex_backend_model.py  operate_mode_checks.yaml  parsing.py  pyomo_backend_model.py  run.py  subset_parser.py  subsets.py  where_parser.py
calliope/config/: annual-energy-balance.yaml  base_math.yaml  combined-max.yaml  constraints.yaml  constraints_if.yaml  constraints_where.yaml  conversion_0.6.0.yaml  custom_constraints.yaml  defaults.yaml  demand_share_per_timestep_decision.yml  locations.yaml  math_schema.yaml  model.yaml  model_data_lookup.yaml  nodes.yaml  plots_template.html  run.yaml  sets.yaml  storage-inter-cluster.yaml  storage_inter_cluster.yaml  subsets.yaml  techs.yaml
calliope/constraints/: __init__.py  base.py  base_planning.py  capacity_factor.py  group_fraction.py  objective.py  optional.py  planning.py  ramping.py
calliope/core/: __init__.py  attrdict.py  debug.py  io.py  model.py  preprocess_checks.py  preprocess_data.py  preprocess_locations.py  preprocess_model.py  preprocess_sets.py
calliope/example/: csp_e_eff.csv  csp_r.csv  csp_r_eff.csv  demand-r1_r.csv  demand-r2_r.csv  set_t.csv
calliope/example_model/: run.yaml  run_profiling.yaml
calliope/lib/: LICENSE_NetworkX  nx_pylab.py
calliope/math/: annual-energy-balance.yaml  base.yaml  operate.yaml  spores.yaml  storage_inter_cluster.yaml
calliope/postprocess/: results.py  util.py
calliope/preprocess/: __init__.py  checks.py  checks.yaml  constraint_sets.py  locations.py  lookup.py  masks.py  model_data.py  model_data_checks.yaml  model_run.py  nodes.py  sets.py  time.py  util.py
calliope/simple_model_data/: demand-r1_r.csv  demand-r2_r.csv  set_t.csv
calliope/test/: AH.py  common.py  conftest.py  go  results.txt  test_AH.py  test_analysis.py  test_backend_expression_parser.py  test_backend_helper_functions.py  test_backend_imask.py  test_backend_latex_backend.py  test_backend_parsing.py  test_backend_pyomo.py  test_backend_pyomo_constraints_conversion_plus.py  test_backend_pyomo_constraints_custom.py  test_backend_pyomo_constraints_group.py  test_backend_pyomo_constraints_storage_plus.py  test_backend_pyomo_interface.py  test_backend_pyomo_objective.py  test_backend_pyomo_util.py  test_backend_subsets.py  test_backend_where_parser.py  test_cli.py  test_constraint_results.py  test_core.py  test_core_attrdict.py  test_core_debug.py  test_core_future_warnings.py  test_core_model.py  test_core_preprocess.py  test_core_time.py  test_core_util.py  test_equation_parser.py  test_eurocalliope.py  test_example_models.py  test_io.py  test_locations.py  test_math.py  test_model_builtin.py  test_model_conversion.py  (+25 more)
calliope/time/: __init__.py  clustering.py  funcs.py  masks.py
doc/: Makefile  conf.py  contact.rst  definitions.rst  generate_plots.py  generate_tables.py  genindex.rst  history.rst  index.rst  make.bat  requirements.txt  requirements.yml
doc/_extensions/: README.md
doc/_static/: github-ribbon.html  (+3 more)
docs/: advanced.md  analysing.md  api_reference.md  building.md  cli_reference.md  contributing.md  index.md  installation.md  migrating.md  running.md  troubleshooting.md  version_history.md
lisa/: __init__.py  core.py  lisa.py  model_settings.yaml  parallel.py  parallel_settings.yaml  parallel_tools.py  run_settings.yaml  settings.yaml  time.py  utils.py
muses/: core.py  utils.py
paper/: codemeta.json  paper.bib  paper.md
requirements/: base.txt  base.yml  dev.txt  dev_tools.yml  docs.txt  docs.yml  latest.yml  legacy-docs.yml  mkdocs.yml  travis.yml  unix.yml
tests/: cli_test.py  conftest.py  io_test.py  model_test.py  test_backend_expression_parser.py  test_backend_general.py  test_backend_gurobi.py  test_backend_helper_functions.py  test_backend_latex_backend.py  test_backend_module.py  test_backend_parsing.py  test_backend_pyomo.py  test_backend_pyomo_constraints_conversion_plus.py  test_backend_pyomo_objective.py  test_backend_where_parser.py  test_cli.py  test_config.py  test_constraint_results.py  test_core_attrdict.py  test_core_future_warnings.py  test_core_model.py  test_core_preprocess.py  test_core_time.py  test_core_util.py  test_data_table_schema.py  test_example_models.py  test_future_warnings.py  test_io.py  test_logging.py  test_math.py  test_math_checks.py  test_model.py  test_model_data.py  test_model_manipulation.py  test_postprocess_math_documentation.py  test_preprocess_data_sources.py  test_preprocess_model_data.py  test_preprocess_model_definition.py  test_preprocess_model_math.py  test_preprocess_time.py  (+3 more)
utils/: conda_create.py
(+844 files in other folders)
